more tests, changed batch to grouped